@@ -1,6 +1,7 @@
 plugins {
 	id 'org.springframework.boot' version '2.2.6.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+	id 'com.google.cloud.tools.jib' version '1.8.0'
 	id 'java'
 	id 'groovy'
 }
@@ -12,6 +13,24 @@ sourceCompatibility = '14'
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
+	}
+}
+
+def dockerPassword = hasProperty('gcloudToken') ? gcloudToken : file('../keyfile.json').text
+
+jib {
+	from {
+		image = 'adoptopenjdk/openjdk14:jdk-14.0.2_12-alpine-slim'
+	}
+	to {
+		image = 'gcr.io/streamster-289010/search-service:latest'
+		auth {
+			username = '_json_key'
+			password = dockerPassword
+		}
+	}
+	container{
+		jvmFlags = ['-Dspring.profiles.active=prod', '--enable-preview']
 	}
 }
 
@@ -40,10 +59,13 @@ dependencies {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	testImplementation 'org.springframework.amqp:spring-rabbit-test'
+	testCompile "org.springframework.security:spring-security-test"
 	testCompile "org.codehaus.groovy:groovy:2.5.13"
 	testCompile platform("org.spockframework:spock-bom:2.0-M3-groovy-2.5")
 	testCompile "org.spockframework:spock-core"
+	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 	testCompile group: 'org.spockframework', name: 'spock-spring', version: '2.0-M3-groovy-2.5'
+	implementation project(":commons")
 }
 
 tasks.withType(JavaCompile) {
